src/css/contacts.css
.contacts > .container {
    padding-top: 64px;
    padding-bottom: 64px;
}

/* Styles for Desktop devices */
@media only screen and (min-width: 1440px) {
    .contacts>.container {
        display: flex;
        padding-top: 92px;
        padding-bottom: 92px;
        gap:24px;
    }

    .contacts_left-side {
        width:calc(100% / 2) ;
    }
}

.contacts_left-side{
    margin-bottom: 24px;
}

.contacts-title {
    margin:      0 auto;
    text-align:  center;
    font-weight: 500;
    font-size:   32px;
    line-height: 120%;
    letter-spacing:-0.01em;
    color: #000;
    margin-bottom: 24px;
}

.contacts-text {
    margin: 0 auto;
    text-align: center;
    /* font-weight: 400; */
    font-size: 18px;
    line-height: 150%;
    color: #000;
    margin-bottom: 32px;
}

/* address */
.contacts-address {
    padding-top: 8px;
    padding-bottom: 8px;
}

.contacts-list{
    display: flex;
    flex-direction: column;
    gap: 16px;
}

.contacts-item{
    line-height: 150%;
    text-decoration: underline;
    text-decoration-skip-ink: none;
    color: #000;
}

.contacts-link {
    display: flex;
    align-items: left;
    gap: 16px;  
}

.icon-contacts-link {
    flex-shrink: 0;
    /* не сжимаеться */
    fill: #000;
    stroke-width: 1px;
    stroke: #000;
}

/* form */

@media only screen and (min-width: 1440px) {
    .contacts_right-side {
        width: calc(100% / 2);
    }
}

.contacts-filds {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 24px;
    width: 100%;
}

.contacts-fild {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 8px;
    width: 100%;
}

.contacts-label {
    line-height: 1.5;
    color: #000;
}

.contacts-input-name,
.contacts-input-phone
 {
    position:relative;
    padding: 8px 12px;
    border: 2px solid #000;
    border-radius: 6px;
    padding-block: 8px;
    padding-inline: 12px;
    width: 100%;
    height: 40px;
    background: rgba(255, 255, 255, 0);

    transition: border, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.contacts-input-name::placeholder {
    line-height: 1.5;
    color: rgba(0, 0, 0, 0.6);
}

.contacts-input-phone::placeholder {
    line-height: 1.5;
    color: rgba(0, 0, 0, 0.6);
}

.contacts-input-name:hover::placeholder{
    color: #000;
}

.contacts-input-phone:hover::placeholder {
    color: #000;
}

.contacts-input-name:focus,
.contacts-input-phone:focus{
    border: 2px solid #b09a0c;
    outline: none;
}

.contacts-input-name:focus::placeholder,
.contacts-input-phone:focus::placeholder {
    color: transparent;
}

.contacts-input-name:not(:placeholder-shown):invalid {
    border-color: red;
    color:red;
    outline: none;
}

.contacts-input-name:not(:placeholder-shown):invalid~.text-invalid-name {
    display: block;
}

.contacts-input-phone:not(:placeholder-shown):invalid {
    border-color: red;
    color:red;
    outline: none;
}

.contacts-input-phone:not(:placeholder-shown):invalid~.text-invalid-phone {
    display: block;
}

.contacts-message{
    border: 2px solid #000;
    border-radius: 6px;
    padding: 12px;
    resize: none;
    width: 100%;
    height: 180px;
    background: rgba(255, 255, 255, 0);

    transition: border, color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}

.contacts-message::placeholder {
    line-height: 1.5;
    color: rgba(0, 0, 0, 0.6);
}

.contacts-message:hover::placeholder,
.contacts-message:focus::placeholder {
    line-height: 1.5;
    color: #000;
}

.contacts-message:focus{
    border: 2px solid #b09a0c;
    outline: none;
}

.contacts-message:focus::placeholder {
    color: transparent; 
}

.contacts-message:not(:placeholder-shown):invalid {
    border: 1px solid red;
    color: red;
    outline: none;
}

.contacts-message:not(:placeholder-shown):invalid~.text-invalid-textarea {
    display: block;
}


/* btn */

.contacts-form-btn{
    font-weight: 500;
    line-height: 1.5;
    border: 1px solid #dcc110;
    border-radius: 6px;
    padding-block: 10px;
    padding-inline: 24px;
    width: 100%;
    height: 44px;
    background: #dcc110;
    outline: none;

    transition: background 350ms cubic-bezier(0.4, 0, 0.2, 1);
}

@media only screen and (min-width: 768px) {
    .contacts-form-btn {
        width: 310px;
    }
}

.btn.contacts-form-btn:hover,
.btn.contacts-form-btn:focus {
    background: #fff;
}

.btn.contacts-form-btn:active{
    box-shadow: inset 0 2px 4px -2px rgba(0, 0, 0, 0.06), inset 0 4px 8px -2px rgba(0, 0, 0, 0.1);
    background: #e6d357;
}


 .text-invalid-name,
 .text-invalid-phone,
 .text-invalid-textarea {
    position: absolute;
    top: 100%;
    /* сразу под инпутом */
    left: 0;
    /* по левому краю */
    line-height: 1.5;
    color: #a00000;
    outline: none;
    display: none;
    
 }

